Added support for possible printing of bystream type

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
+# project files
+.cproject
+.project
+
+# Build files
+build/
+
 # NetBeans user-specific settings
 /bindings/java/nbproject/private/
 
